--- a/css/style.css
+++ b/css/style.css
@@ -46,15 +46,18 @@ main{
 }
 
 .boxl{
-    width: 20%;
+    width: 17%;
+    margin: 1% 1% 1% 0;
 }
 
 .boxc{
-    width: 60%;
+    width: 56%;
+    margin: 1%;
 }
 
 .boxr{
-    width: 20%;
+    width: 17%;
+    margin: 1% 0 1% 1%;
 }
 
 .left{
