--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ main{
 }
 
 .boxr{
-    width: 17%;
+    width: 20%;
     margin: 1% 0 1% 1%;
 }
 
@@ -64,9 +64,13 @@ main{
     float: left;
 }
 
+.section-box, .debug{
+    height: 300px;
+}
+
 
 .debug .boxl, .debug .boxc, .debug .boxr{
-    height: 300px;
+    height: 96%;
     background-color: #abcfe7;
 }
 
